# smart-trade-ai

./: .flake8  .gitignore  README.md  alembic.ini  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: 202502150131-e7edf39d0378_init_models.py  202502171442-7e79e1a06798_init.py
app/: version.py
app/containers/: application.py  gateways.py  repositories.py  services.py
app/enums/: market.py
app/main/: analyze.py  api.py  polling.py
app/models/: __init__.py  balance.py  base.py  market.py  trade.py
app/repositories/: db.py  trade.py
app/resources/: bybit.py  database.py  redis_client.py
app/routes/v1/: __init__.py  sample.py
app/schemas/: balance.py  base.py  market.py  repository.py  trade.py
app/services/: bybit_stream.py  chat_gpt.py  market.py  scheduler.py  trade.py
config/: .env_sample  settings.py
tests/: bybit.py  test_version.py
